[metadata]
name = subhajit_engg_tools
version = 0.0.1
author = Subhajit Maji
author_email = subhajitsr@gmail.com
description = Useful data engineering tools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/subhajitsr/subhajit-engineering-tools
project_urls =
    Bug Tracker = https://github.com/subhajitsr/subhajit-engineering-tools
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src